--- a/societies1-16.html
+++ b/societies1-16.html
@@ -136,10 +136,10 @@ body {
 <table width="920" border="0" cellspacing="1" cellpadding="3">
     <tr>
       <td width="14%" align="center" valign="middle" bgcolor="#4a8522"><font color="#FFFFFF"><b>活動名稱</b></font></td>
-      <td width="22%" align="center" valign="middle" bgcolor="#4a8522"><font color="#FFFFFF"><b>社團時間</b></font></td>
+      <td width="20%" align="center" valign="middle" bgcolor="#4a8522"><font color="#FFFFFF"><b>社團時間</b></font></td>
       <td width="20%" align="center" valign="middle" bgcolor="#4a8522"><font color="#FFFFFF"><b>社團地點</b></font></td>
       <td width="10%" align="center" valign="middle" bgcolor="#4a8522"><font color="#FFFFFF"><b>社團人數</b></font></td>
-      <td width="10%" align="center" valign="middle" bgcolor="#4a8522"><font color="#FFFFFF"><b>社團費用</b></font></td>
+      <td width="12%" align="center" valign="middle" bgcolor="#4a8522"><font color="#FFFFFF"><b>社團費用</b></font></td>
       <td width="14%" align="center" valign="middle" bgcolor="#4a8522"><font color="#FFFFFF"><b>社團聯絡人</b></font></td>
       <td align="center" valign="middle" bgcolor="#4a8522"><font color="#FFFFFF"><b>連絡方式</b></font></td>
     </tr>
@@ -147,8 +147,9 @@ body {
       <td align="center" valign="middle" bgcolor="#F5F5F5">燃脂有氧</td>
       <td align="center" valign="middle" bgcolor="#F5F5F5">每週一 18:00~19:00</td>
       <td rowspan="4" align="center" valign="middle" bgcolor="#F5F5F5">仁寶大樓 B1休閒中心</td>
-      <td rowspan="6" align="center" valign="middle" bgcolor="#F5F5F5">每班25人</td>
-      <td rowspan="6" align="center" valign="middle" bgcolor="#F5F5F5">每班一期皆12堂課 $600元/每班每期每人 </td>
+      <td rowspan="6" align="center" valign="middle" bgcolor="#F5F5F5"><font color="#0000FF">每班約<br />
+        20~25人</font></td>
+      <td rowspan="6" align="center" valign="middle" bgcolor="#F5F5F5"><font color="#0000FF">每班一期12堂課 $600元/每班每期每人</font> </td>
       <td align="center" valign="middle" bgcolor="#F5F5F5">周霖杰<br />
         Chou. Jie</td>
       <td align="center" valign="middle" bgcolor="#F5F5F5">14104</td>
@@ -205,7 +206,8 @@ body {
   <p>歡迎來到活力有氧社一起做運動，加強體內有氧循環，調整自我體態，讓你健康又有好身材！！</p>
   <p>我們將帶給你最多樣化、最有活力的運動課程，讓你從此喜歡運動、享受運動！</p>
   <p>你將會感受到燃燒體脂肪也可以是如此有趣Happy！！ </p>
-  <p>&nbsp;</p></td>
+  <p>&nbsp;</p>
+  <p><b><font color="#FF9900">課程介紹</font></b></p></td>
 </tr>
 
 <tr>
@@ -229,7 +231,7 @@ body {
     <tr>
       <td>&nbsp;</td>
       <td valign="top">課程內容</td>
-      <td>結合武術、拳擊&amp;防身術的拳擊有氧(Body Combat)，可增加身體敏捷性，提升心肺能力及肌耐力，讓你不只瘦身、塑身更強身！！</td>
+      <td>結合武術、拳擊&amp;防身術的拳擊有氧(Body Combat)，可增加身體敏捷性，提升心肺能力及肌耐力，讓你不只瘦身、塑身更強身！！<font color="#0000FF">在老師的熱力帶領下，將讓你一次次挑戰自我界線，進而超越自我極限！！</font></td>
     </tr>
     <tr>
       <td width="25"><img src="images/societies/02/1-1/00.gif" width="25" height="15" border="0" /></td>
@@ -249,7 +251,7 @@ body {
     <tr>
       <td>&nbsp;</td>
       <td valign="top">課程內容</td>
-      <td>結合律動、肌力訓練&amp;肢體伸展，讓妳在午間紓壓，同時雕塑窈窕S曲線！想要好身材的妳，一定要來上！！</td>
+      <td><font color="#0000FF">結合肌力訓練&amp;肢體伸展</font>，讓妳在午間紓壓，同時雕塑窈窕S曲線！想要好身材的妳，一定要來上！！</td>
     </tr>
     <tr>
       <td width="25"><img src="images/societies/02/1-1/00.gif" width="25" height="15" border="0" /></td>
@@ -267,7 +269,7 @@ body {
 <tr>
 <td class="txt_link" align="left" valign="top"><p>&nbsp;</p>
   <p><b><font color="#FF9900">師資介紹</font></b></p>
-  <p><img src="images/societies/02/1-1/01.jpg" width="669" height="493" border="0" /></p>
+  <p><img src="images/societies/02/1-1/01.jpg" width="670" height="905" border="0" /></p>
   <p>&nbsp;</p></td>
 </tr>
 
@@ -276,12 +278,13 @@ body {
 <table border="0" cellpadding="2" cellspacing="0" width="920">
 <tbody>
 <tr>
-<td colspan="7" class="td_s01" align="center" height="20" valign="middle"> <b>活動照片</b></td>
+<td colspan="7" class="td_s01" align="center" height="20" valign="middle"> <b>活動影片</b></td>
 </tr>
 <tr>
 <td colspan="7" align="center" height="26" valign="middle">
 <table border="0" cellpadding="5" cellspacing="0" width="920">
 <tbody>
+<!--
 <tr>
 <td align="center" valign="middle"><img src="images/societies/02/1-1/02.jpg" border="0" height="330" width="440" /></td>
 <td align="center" valign="middle"><img src="images/societies/02/1-1/03.jpg" border="0" width="440" height="330" /></td>
@@ -294,6 +297,12 @@ body {
 <td align="center" valign="middle"><img src="images/societies/02/1-1/06.jpg" width="440" height="329" border="0" /></td>
 <td align="center" valign="middle"><img src="images/societies/02/1-1/07.jpg" width="440" height="329" border="0" /></td>
 </tr>
+-->
+<tr>
+  <td align="center" valign="middle">
+    <embed src="images\societies\02\1-1\video.mp4" loop="true" width="768" height="513"></embed>
+   </td>
+  </tr>
 </tbody>
 </table>
 </td>
