--- a/societies1-16.html
+++ b/societies1-16.html
@@ -147,9 +147,9 @@ body {
       <td align="center" valign="middle" bgcolor="#F5F5F5">燃脂有氧</td>
       <td align="center" valign="middle" bgcolor="#F5F5F5">每週一 18:00~19:00</td>
       <td rowspan="4" align="center" valign="middle" bgcolor="#F5F5F5">仁寶大樓 B1休閒中心</td>
-      <td rowspan="6" align="center" valign="middle" bgcolor="#F5F5F5"><font color="#0000FF">每班約<br />
-        20~25人</font></td>
-      <td rowspan="6" align="center" valign="middle" bgcolor="#F5F5F5"><font color="#0000FF">每班一期12堂課 $600元/每班每期每人</font> </td>
+      <td rowspan="6" align="center" valign="middle" bgcolor="#F5F5F5">每班約<br />
+        20~25人</td>
+      <td rowspan="6" align="center" valign="middle" bgcolor="#F5F5F5">每班一期12堂課 $600元/每班每期</td>
       <td align="center" valign="middle" bgcolor="#F5F5F5">周霖杰<br />
         Chou. Jie</td>
       <td align="center" valign="middle" bgcolor="#F5F5F5">14104</td>
@@ -212,65 +212,67 @@ body {
 
 <tr>
 <td>
-<table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" class="txt_link">
+<table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
     <tr>
       <td width="25"><img src="images/societies/02/1-1/00.gif" width="25" height="15" border="0" /></td>
-      <td width="8%" valign="top"><b>燃脂有氧</b></td>
+      <td class="txt_link2" width="8%" valign="top"><b>燃脂有氧</b></td>
       <td><font color="#FF3399">飆汗程度 : ★★★★</font></td>
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td valign="top">課程內容</td>
+      <td valign="top" class="txt_link2">課程內容</td>
       <td>40分鐘的綜合有氧運動加上20分鐘的和緩運動，隨音樂享受飆汗的快樂，保證燃燒體脂肪，強化身體新陳代謝，健康活力滿滿。</td>
     </tr>    
     <tr>
       <td width="25"><img src="images/societies/02/1-1/00.gif" width="25" height="15" border="0" /></td>
-      <td width="8%" valign="top"><b>拳擊有氧</b></td>
+      <td width="8%" valign="top" class="txt_link2"><b>拳擊有氧</b></td>
       <td><font color="#FF3399">飆汗程度 : ★★★★★</font></td>
     </tr>
     <tr>
       <td>&nbsp;</td>
       <td valign="top">課程內容</td>
-      <td>結合武術、拳擊&amp;防身術的拳擊有氧(Body Combat)，可增加身體敏捷性，提升心肺能力及肌耐力，讓你不只瘦身、塑身更強身！！<font color="#0000FF">在老師的熱力帶領下，將讓你一次次挑戰自我界線，進而超越自我極限！！</font></td>
+      <td class="txt_link2">結合武術、拳擊&amp;防身術的拳擊有氧(Body Combat)，可增加身體敏捷性，提升心肺能力及肌耐力，讓你不只瘦身、塑身更強身！！在老師的熱力帶領下，將讓你一次次挑戰自我界線，進而超越自我極限！！</td>
     </tr>
     <tr>
       <td width="25"><img src="images/societies/02/1-1/00.gif" width="25" height="15" border="0" /></td>
-      <td width="8%" valign="top"><b>身體正位</b></td>
+      <td width="8%" valign="top" class="txt_link2"><b>身體正位</b></td>
       <td><font color="#FF3399">飆汗程度 : ★★★</font></td>
     </tr>
     <tr>
       <td>&nbsp;</td>
       <td valign="top">課程內容</td>
-      <td>身體正位，是針對上班族因「緊」和「無力」造成分散下沈的身體所設計的課程。以腿、骨盆、脊椎為訓練重點，增強上、下半身的連結感和對的使用。課程強調身體正位堆疊的概念，讓妳知道整骨先正骨，只要骨頭位置放好，體態就會長挺不下沈。當妳熟悉了該做什麼、不該做什麼，就能和妳的身體永久相扶持！！</td>
+      <td class="txt_link2">身體正位，是針對上班族因「緊」和「無力」造成分散下沈的身體所設計的課程。以腿、骨盆、脊椎為訓練重點，增強上、下半身的連結感和對的使用。課程強調身體正位堆疊的概念，讓妳知道整骨先正骨，只要骨頭位置放好，體態就會長挺不下沈。當妳熟悉了該做什麼、不該做什麼，就能和妳的身體永久相扶持！！</td>
     </tr>
     <tr>
       <td width="25"><img src="images/societies/02/1-1/00.gif" width="25" height="15" border="0" /></td>
-      <td width="8%" valign="top"><b>窈窕塑身</b></td>
+      <td width="8%" valign="top" class="txt_link2"><b>窈窕塑身</b></td>
       <td><font color="#FF3399">飆汗程度 : ★★★</font></td>
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td valign="top">課程內容</td>
-      <td><font color="#0000FF">結合肌力訓練&amp;肢體伸展</font>，讓妳在午間紓壓，同時雕塑窈窕S曲線！想要好身材的妳，一定要來上！！</td>
+      <td valign="top" class="txt_link2">課程內容</td>
+      <td>結合肌力訓練&amp;肢體伸展，讓妳在午間紓壓，同時雕塑窈窕S曲線！想要好身材的妳，一定要來上！！</td>
     </tr>
     <tr>
       <td width="25"><img src="images/societies/02/1-1/00.gif" width="25" height="15" border="0" /></td>
-      <td width="8%" valign="top"><b>核心訓練</b></td>
+      <td width="8%" valign="top" class="txt_link2"><b>核心訓練</b></td>
       <td><font color="#FF3399">飆汗程度 : ★★★★</font></td>
     </tr>
     <tr>
       <td>&nbsp;</td>
       <td valign="top">課程內容</td>
-      <td>核心，是使腿、上下半身連結，脊椎骨盆在正位角度上，不論生活中或從事各項運動都能有效率運用身體，不造成關節和週邊結締組織損害。這堂課沒有華麗花俏動作，沒有激情吶喊、震耳欲聾的重低音音樂，正確安全的訓練照顧身體是對自己負責任的運動方式。這堂真正的核心課程，教的是認真關照自己的身體，重新架起穩定的骨骼，從此不再一天到晚這裡痠、那裡痛！！</td>
+      <td class="txt_link2">核心，是使腿、上下半身連結，脊椎骨盆在正位角度上，不論生活中或從事各項運動都能有效率運用身體，不造成關節和週邊結締組織損害。這堂課沒有華麗花俏動作，沒有激情吶喊、震耳欲聾的重低音音樂，正確安全的訓練照顧身體是對自己負責任的運動方式。這堂真正的核心課程，教的是認真關照自己的身體，重新架起穩定的骨骼，從此不再一天到晚這裡痠、那裡痛！！</td>
     </tr>
   </table>
   <p>&nbsp;</p></td>
 </tr>
 <tr>
 <td class="txt_link" align="left" valign="top"><p>&nbsp;</p>
-  <p><b><font color="#FF9900">師資介紹</font></b></p>
-  <p><img src="images/societies/02/1-1/01.jpg" width="670" height="905" border="0" /></p>
-  <p>&nbsp;</p></td>
+  <p><b><font color="#FF9900">師資介紹</font></b></p></td>
+</tr>
+<tr>
+  <td align="center" valign="top"><p><img src="images/societies/02/1-1/01.jpg" width="500" height="675" border="0" /></p>
+    <p>&nbsp;</p></td>
 </tr>
 
 <tr>
