--- a/societies1-16.html
+++ b/societies1-16.html
@@ -302,7 +302,9 @@ body {
 -->
 <tr>
   <td align="center" valign="middle">
-    <embed src="images\societies\02\1-1\video.mp4" loop="true" width="768" height="513"></embed>
+    <embed src="images\societies\02\1-1\video.mp4" loop="true" width="768" height="513" controls controlsList="nodownload"></embed>
+    
+    
    </td>
   </tr>
 </tbody>
