--- a/societies1-16.html
+++ b/societies1-16.html
@@ -230,7 +230,7 @@ body {
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td valign="top">課程內容</td>
+      <td class="txt_link2" valign="top">課程內容</td>
       <td class="txt_link2">結合武術、拳擊&amp;防身術的拳擊有氧(Body Combat)，可增加身體敏捷性，提升心肺能力及肌耐力，讓你不只瘦身、塑身更強身！！在老師的熱力帶領下，將讓你一次次挑戰自我界線，進而超越自我極限！！</td>
     </tr>
     <tr>
@@ -240,7 +240,7 @@ body {
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td valign="top">課程內容</td>
+      <td valign="top" class="txt_link2">課程內容</td>
       <td class="txt_link2">身體正位，是針對上班族因「緊」和「無力」造成分散下沈的身體所設計的課程。以腿、骨盆、脊椎為訓練重點，增強上、下半身的連結感和對的使用。課程強調身體正位堆疊的概念，讓妳知道整骨先正骨，只要骨頭位置放好，體態就會長挺不下沈。當妳熟悉了該做什麼、不該做什麼，就能和妳的身體永久相扶持！！</td>
     </tr>
     <tr>
@@ -260,7 +260,7 @@ body {
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td valign="top">課程內容</td>
+      <td valign="top" class="txt_link2">課程內容</td>
       <td class="txt_link2">核心，是使腿、上下半身連結，脊椎骨盆在正位角度上，不論生活中或從事各項運動都能有效率運用身體，不造成關節和週邊結締組織損害。這堂課沒有華麗花俏動作，沒有激情吶喊、震耳欲聾的重低音音樂，正確安全的訓練照顧身體是對自己負責任的運動方式。這堂真正的核心課程，教的是認真關照自己的身體，重新架起穩定的骨骼，從此不再一天到晚這裡痠、那裡痛！！</td>
     </tr>
   </table>
