--- a/societies1-16.html
+++ b/societies1-16.html
@@ -302,8 +302,12 @@ body {
 -->
 <tr>
   <td align="center" valign="middle">
+    <video width="768" height="513" controls controlsList="nodownload">
+    <source src="images\societies\02\1-1\video.mp4" type="video/mp4" />
+    </video>
+    <!--
     <embed src="images\societies\02\1-1\video.mp4" loop="true" width="768" height="513" controls controlsList="nodownload"></embed>
-    
+    -->
     
    </td>
   </tr>
