--- a/societies_01.html
+++ b/societies_01.html
@@ -158,12 +158,13 @@ body {
           <div id="companyTitle02">隸屬廠區：台北總部</div>-->
           <div id="images_01"><a href="societies1-7.html" target="_top"><img src="images/societies/01/07.jpg" width="275" height="206" border="0" /></a></div>
     <div class="A02text" id="columnscopy01">▎瘋羽無阻社</div>
-  </div><!--
-  <div id="columnsright">
-          <div id="companyTitle02"></div>
-    <div id="images_01"><a href="#"><img src="images/societies/01/02.jpg" width="275" height="206" border="0" /></a></div>
-    <div class="A02text" id="columnscopy01">▎羽球二社</div>
+			
   </div>
+  <div id="columnsright">
+          <div id="companyTitle"></div>
+    <div id="images_01"><a href="societies1-8.html"><img src="images/societies/01/08.jpg" width="275" height="206" border="0" /></a></div>
+    <div class="A02text" id="columnscopy01">▎仁寶足球社</div>
+  </div><!--
     <div id="columnsright">
           <div id="companyTitle02"></div>
     <div id="images_01"><a href="#"><img src="images/societies/01/03.jpg" width="275" height="206" border="0" /></a></div>
